fix align

--- a/Bootstrap - TinDog/TinDog-Start-master/css/styles.css
+++ b/Bootstrap - TinDog/TinDog-Start-master/css/styles.css
@@ -1,10 +1,8 @@
-
-
 #title {
     background-color: #ff4c68;
     color: white;
     height: 850px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 html,
@@ -16,12 +14,12 @@ body {
     overflow-x: hidden;
 }
 
-body{
+body {
     font-family: 'Montserrat', sans-serif;
 }
 
 
-.container-fluid{
+.container-fluid {
     padding: 3% 15%;
 }
 
@@ -31,21 +29,22 @@ h1 {
     line-height: 1.5;
     font-weight: 900;
 }
-h2{
+
+h2 {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 3rem;
     line-height: 1.5;
 }
 
-h3{
+h3 {
     font-size: 1.5rem;
     color: #1d2325;
     font-weight: bold;
     padding-top: 1.2rem;
 }
 
-.btn{
+.btn {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
@@ -53,54 +52,55 @@ h3{
 
 /*Navigation Bar*/
 
-.navbar{
+.navbar {
     padding: 0 0 4.5rem;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
     transition: color .15s ease-in-out;
 }
-.navbar-brand:hover{
+
+.navbar-brand:hover {
     color: black;
 }
 
-.nav-item{
+.nav-item {
     padding: 0 18px;
 }
 
-.nav-link{
+.nav-link {
     font-size: 1.2rem;
     font-weight: 400;
     color: white;
 }
 
 /* Download Buttons */
-.download-button{
+.download-button {
     margin: 5% 3% 5% 0%;
 }
 
 /* Title Image */
 
-.title-image{
+.title-image {
     width: 60%;
     transform: rotate(20deg);
 }
 
 /*Features*/
-#features{
+#features {
     padding: 7% 15%;
 }
 
-#features i{
+#features i {
     color: #ef8172;
     font-size: 5rem;
     transition: all .1s ease-in-out;
 }
 
-#features i:hover{
+#features i:hover {
     color: #ff4c68;
     cursor: pointer;
     scale: 110%;
@@ -108,41 +108,41 @@ h3{
 
 
 
-#features p{
+#features p {
     color: #8f8f8f;
     font-size: 1.5rem;
 }
 
-#features .col-md-12{
+#features .col-md-12 {
     padding: 50px 0;
 }
 
 /*Testimonial Section*/
 
-#testimonials{
+#testimonials {
     text-align: center;
     background-color: #ef8172;
     color: white;
 }
 
-.testimonial-image{
+.testimonial-image {
     border-radius: 50%;
     width: 10%;
     margin: 20px;
 }
 
-.carousel-item{
+.carousel-item {
     padding: 7% 15%;
 }
 
 /*Press*/
-#press{
+#press {
     background-color: #ef8172;
     text-align: center;
     padding-bottom: 3%;
 }
 
-#press img{
+#press img {
     width: 15%;
     margin: 20px 20px 50px;
 }
@@ -150,5 +150,6 @@ h3{
 
 /*Pricing*/
 #pricing {
-padding: 3% 0;
+    text-align: center;
+    padding: 3% 0;
 }
